# lrtic

./: Cargo.toml  MCXN.yaml  MCXN947.yaml  flake.nix  memory.x
.cargo/: config.toml
src/: main.rs
