[package]
name = "lrtic"
version = "0.1.0"
edition = "2024"

[dependencies]
# cortex-m-semihosting = "0.5.0"
mcx-pac = { version = "0.1.6", features = ["rt", "mcxn947_cm33_core0", "defmt"] }
# rtic = { version = "2.1.2", features = ["cortex-m", "thumbv8main-backend"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"

panic-probe = { version = "0.3", features = ["print-defmt"] }

[patch.crates-io]
mcx-pac = { git = "https://github.com/bksalman/mcx-pac" }
